--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -6,6 +6,8 @@
   --darkGrey: #bab2b5;
   --darkBlue: #123c69;
   --dark: #4d4d4d;
+  --green: #1ab188;
+  --darkGreen: #0b9185;
 
   --primaryFont: Avenir, Helvetica, Arial, sans-serif;
 }
